...
  return showModalBottomSheet(
    isScrollControlled: true,
    context: context,
    builder: (context) {
      return _createExtensibleDialogWidget(
        const AddProductForm(
          key: Key("add_product_form"),
        ),
        context,
        padding: const EdgeInsets.all(20),
      );
    },
  );
...
                                ? MakaImages.successDialog
                                : MakaImages.errorDialog))),
                    Padding(
                      padding: const EdgeInsets.symmetric(vertical: 10.0),
                      child: Center(
                          child: Text(
                        success ? "Successful" : "Oops!",
                        style: Theme.of(context).textTheme.subtitle1!.copyWith(
                              fontWeight: FontWeight.w600,
                            ),
                      )),
                    ),
                    Center(
...
