...
      state: AppState(
          pageState: productController.pageState,
          onRetry: () => setState(() {
                productController.pageState = PageState.loaded;
              })),
      floatingActionButton: FloatingActionButton(
        key: const Key("add_product_fab"),
        onPressed: () => showAddProductBottomSheet(context),
        backgroundColor: primaryColor,
        child: const Icon(Icons.add),
      ),
      appBar: MakaAppBar(
        title: Row(
...
